new configs ids; pdf check

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [IDENTIFICATION]
 # Set your user agent string here.
-USERAGENT = IR UF22 88907672
+USERAGENT = IR UF22 88907672,11873520,87471362,67008308
 
 [CONNECTION]
 HOST = styx.ics.uci.edu
